# EY

./: .env.example  OEM_MOCK_DATA_SETUP.md  README.md  SETUP.md  consumer.py  postman_collection.json  requirements.txt  verify_customer_endpoints.py  worker_runner.py
app/: initial_data.py  main.py
backend/: .env  .gitignore  alerts.py  analytics.py  auth.py  auth_routes.py  capa.py  check_db.py  config.json  config.py  consumer.py  create_service_user.py  credentials.txt  db.py  debug_notifications.py  evaluate.py  get_sc_id.py  graph.py  invoices.py  jobs.py  logs.py  main.py  middleware.py  ml.py  mongo.py  notification_agent.py  notifications.py  notifications_view.py  oem.py  output_latest.txt  output_logs.txt  rca.py  redis_client.py  requirements.txt  service.py  service_views.py  simulator.py  telemetry.py  telemetry_simulator.py  telemetry_ws.py  (+12 more)
backend 3/: consumer.py  simulator.py  train_ueba_model.py  ueba_model.pkl  ueba_worker.py  utils.py  websocket_server.py
backend_1/: .env  README.md  postman_collection.json  requirements.txt  verify_api.py
backend_12/: .gitignore  pyproject.toml
backend_12/app/: main.py
backend_12/app/api/: auth.py  booking.py  oem.py  service_centre.py  vehicles.py
backend_12/app/models/: booking.py
backend_12/app/schemas/: agent_state.py
backend_12/app/services/: anomaly_service.py  booking_service.py  diagnosis_service.py  scheduling_service.py  service_centre_service.py
backend_12/app/tests/: seed.py
backend_12/app/utils/: connection.py  security.py
backend_2/: pyproject.toml
frontend/: README.md  index.html  (+6 more)
(+77 files in other folders)
